--- a/index.html
+++ b/index.html
@@ -32,26 +32,26 @@
       <form class="freeTrialForm">
         <div class="inputWrapper">
           <label for="name">first name</label>
-          <input maxlength="16"  minlength="2" class="freeTrialForm__input" required id="name"type="text" placeholder="first name">
-          <span class="badinputMessage">El nombre no puede estar vacio</span>
+          <input pattern="[A-Za-z]{1,32}" maxlength="32"  minlength="1" class="freeTrialForm__input" required id="name"type="text" placeholder="first name">
+          <span class="badinputMessage hidden">First Name cannot be empty</span>
         </div>
 
         <div class="inputWrapper">
           <label for="last-name">last name</label>
-          <input maxlength="16"  minlength="2" class="freeTrialForm__input" required id="last-name" type="text" placeholder="last name">
-          <span class="badinputMessage">El apellido no puede estar vacio</span>
+          <input pattern="[A-Za-z]{1,32}" maxlength="32"  minlength="1" class="freeTrialForm__input" required id="last-name" type="text" placeholder="last name">
+          <span class="badinputMessage hidden">Last Name cannot be empty</span>
         </div>
 
         <div class="inputWrapper">
           <label for="email">email address</label>
           <input pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$"class="freeTrialForm__input" required type="email" id="email" placeholder="email address">
-          <span class="badinputMessage">El email no puede estar vacio</span>
+          <span class="badinputMessage hidden">Looks like this is not an email</span>
         </div>
         
         <div class="inputWrapper">
           <label for="password">password</label>
-          <input title="The password must contain:"pattern="^(?=.*[a-z])(?=.*[A-Z])(?=.*[0-9])(?=.*[!@#$%^&*_=+-]).{8,12}$" class="freeTrialForm__input" required type="password" id="password" placeholder="password">
-          <span class="badinputMessage">La password no puede estar vacio</span>
+          <input title="Minimum eight characters, at least one uppercase letter, one lowercase letter and one number" pattern="^(?=.*[a-z])(?=.*[A-Z])(?=.*[0-9])(?=.*[!@#$%^&*_=+-]).{8,12}$" class="freeTrialForm__input" required type="password" id="password" placeholder="password">
+          <span class="badinputMessage hidden">Looks like this is not an password</span>
         </div>
 
         <div class="inputWrapper">
@@ -62,13 +62,10 @@
 
       </form>
     </section>
-
-
-
-
-
-
   </main>
 
 </body>
 </html>
+
+
+<script src="js/validations.js"></script>
