--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           then <data class="trialSection__price" value=20.00>20</data>/mo. thereafter</p>
       </section>
 
-      <form class="freeTrialForm">
+      <form name="Sign Up Form"class="freeTrialForm">
         <div class="inputWrapper">
           <label for="name">first name</label>
           <input pattern="[A-Za-z]{1,32}" maxlength="32"  minlength="1" class="freeTrialForm__input" required id="name"type="text" placeholder="first name">
